<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/productText"
        style="@style/PopUpDialogHeaderStyle"/>

    <Spinner
        android:id="@+id/personInChargeSp"
        style="@style/CashierSpinnerRowTextStyle" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#AAA"
        android:paddingBottom="1dp">

        <TextView
            android:gravity="center_vertical|start"
            android:text="@string/count"
            style="@style/CashierNumberValueStyle"/>

        <TextView
            android:id="@+id/countText"
            android:gravity="center_vertical|end"
            style="@style/CashierNumberValueStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/numberBtnPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout style="@style/CashierNumberRowStyle" >

            <Button
                android:id="@+id/number7Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_7" />

            <Button
                android:id="@+id/number8Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_8" />

            <Button
                android:id="@+id/number9Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_9" />
        </LinearLayout>

        <LinearLayout style="@style/CashierNumberRowStyle" >

            <Button
                android:id="@+id/number4Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_4" />

            <Button
                android:id="@+id/number5Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_5" />

            <Button
                android:id="@+id/number6Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_6" />
        </LinearLayout>

        <LinearLayout style="@style/CashierNumberRowStyle" >

            <Button
                android:id="@+id/number1Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_1" />

            <Button
                android:id="@+id/number2Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_2" />

            <Button
                android:id="@+id/number3Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_3" />
        </LinearLayout>

        <LinearLayout style="@style/CashierNumberRowStyle" >

            <Button
                android:id="@+id/actionCBtn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_c" />

            <Button
                android:id="@+id/number0Btn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/number_0" />

            <Button
                android:id="@+id/actionXBtn"
                style="@style/CashierNumberButtonStyle"
                android:text="@string/delete_char" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/CashierNumberRowStyle" >

        <Button
            android:id="@+id/okBtn"
            style="@style/CashierOkCancelButtonStyle"
            android:text="@string/ok" />
        
        <TextView
            android:layout_height="fill_parent"
            android:layout_width="1dp"
            android:background="#AAA"/>

        <Button
            android:id="@+id/cancelBtn"
            style="@style/CashierOkCancelButtonStyle"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>