<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PlainFragmentStyle" >

    <LinearLayout style="@style/FormStyle" >
		
        <LinearLayout style="@style/FormRowStyle" >

            <TextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_name_fl" />
            
            <TextView
                style="@style/FormTextStyle"
                android:text="@string/field_name" />

            <EditText
                android:id="@+id/nameText"
                style="@style/FormInputStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <TextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_telephone_fl" />
            
            <TextView
                style="@style/FormTextStyle"
                android:text="@string/field_telephone" />

            <EditText
                android:id="@+id/telephoneText"
                style="@style/FormInputStyle" />
        </LinearLayout>
        
		<LinearLayout style="@style/FormRowStyle" >

            <TextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_email_fl" />
            
            <TextView
                style="@style/FormTextStyle"
                android:text="@string/field_email" />

            <EditText
                android:id="@+id/emailText"
                style="@style/FormInputEmailStyle" />
        </LinearLayout>
        
		<LinearLayout style="@style/FormRowStyle"
		    android:visibility="gone">

            <TextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_email_status_fl" />
            
            <TextView
                style="@style/FormTextStyle"
                android:text="@string/field_email_status" />

            <Spinner
                android:id="@+id/emailStatusSp"
                style="@style/FormInputListStyle" />
        </LinearLayout>
        
        <LinearLayout style="@style/FormRowStyle" >

            <TextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_address_fl" />
            
            <TextView
                style="@style/FormTextStyle"
                android:text="@string/field_address" />

            <EditText
                android:id="@+id/addressText"
                style="@style/FormInputTextAreaStyle" />
        </LinearLayout>

        <LinearLayout style="@style/FormRowStyle"
            android:visibility="gone">

            <TextView
                style="@style/FormTextFirstLetterStyle"
                android:text="@string/field_status_fl" />
            
            <TextView
                style="@style/FormTextStyle"
                android:text="@string/field_status" />

            <Spinner
                android:id="@+id/statusSp"
                style="@style/FormInputListStyle" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>